# SW-RAG

./: README.md  f1.ipynb  pyproject.toml
app/: __init__.py  server.py
